--- a/index.css
+++ b/index.css
@@ -1,9 +1,36 @@
+/* ------------------- */
+/* Custom properties   */
+/* ------------------- */
+:root {
+  /* colors */
+  --clr-dark: hsl(230 35% 7%);
+  --clr-light: hsl(231 77% 90%);
+  --clr-white: hsl(0 0% 100%);
+
+  /* font-sizes */
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+
+  /* font-families */
+  --ff-serif: "Bellefair", serif;
+  --ff-sans-cond: "Barlow Condensed", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
+}
+
 /* ----------- */
 /* Reset */
 /* ---------- */
 
 /* Box Sizing */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -16,73 +43,169 @@ h4,
 h5,
 p,
 figure,
-picture{
-    margin: 0;
+picture {
+  margin: 0;
+}
+
+/* reason my design didn't use bold title */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
 }
 /* set up the bdoy */
-body{
-    line-height: 1.5;
-    min-height: 100vh;
-
+body {
+  font-family: var(--ff-sans-normal);
+  font-size: var(--fs-400);
+  color: var(--clr-white);
+  background-color: var(--clr-dark);
+  line-height: 1.5;
+  min-height: 100vh;
 }
 /* make images easier to work with */
-img, picture{
-    max-width: 100%;
-    display: block;
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
 /* make forms easier to work with */
-input, 
+input,
 button,
 textarea,
-select{
-    font: inherit; 
+select {
+  font: inherit;
 }
 
-/* remove animations for people who've turned them off */ 
+/* remove animations for people who've turned them off */
 @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-     scroll-behavior: auto;
-    }
-    
-    *,
-    *::before,
-    *::after {
-      animation-duration: 0.01ms !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.01ms !important;
-      scroll-behavior: auto !important;
-    }
+  html:focus-within {
+    scroll-behavior: auto;
   }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 
 /* ----------- */
 /* Utility Classes */
 /* ---------- */
 
 .flex {
-    display: flex;
-    gap: var(--gap, 1rem);
-
+  display: flex;
+  gap: var(--gap, 1rem);
 }
 
 .gird {
-    display: grid;
-    gap: var(--gap, 1rem);
-
+  display: grid;
+  gap: var(--gap, 1rem);
 }
- .container{
-     padding-inline: 2em;  /** same as padding: 0 auto **/
-     margin-inline: auto;
-     max-width: 80rem;
- }
 
- .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap; /* added line */
-    border: 0;
-  }
+/* this flow will set margin top to all child except first one.  */
+.flow > * + * {
+  margin-top: var(--flow-space, 1rem);
+}
+.container {
+  padding-inline: 2em; /** same as padding: 0 auto **/
+  margin-inline: auto;
+  max-width: 80rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
+
+/* colors */
+.bg-dark {
+  background-color: hsl(var(--clr-dark));
+}
+.bg-accent {
+  background-color: hsl(var(--clr-light));
+}
+.bg-white {
+  background-color: hsl(var(--clr-white));
+}
+
+.text-dark {
+  background-color: hsl(var(--clr-dark));
+}
+.text-accent {
+  background-color: hsl(var(--clr-light));
+}
+.text-white {
+  background-color: hsl(var(--clr-white));
+}
+
+/* typography */
+.ff-serif {
+  font-family: var(--ff-serif);
+}
+.ff-sans-cond {
+  font-family: var(--ff-sans-cond);
+}
+.ff-sans-normal {
+  font-family: var(--ff-sans-normal);
+}
+
+.letter-spacing-1 {
+  letter-spacing: 4.75px;
+}
+.letter-spacing-2 {
+  letter-spacing: 2.7px;
+}
+.letter-spacing-3 {
+  letter-spacing: 2.35px;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.fs-900 {
+  font-size: var(--fs-900);
+}
+.fs-800 {
+  font-size: var(--fs-800);
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-200 {
+  font-size: var(--fs-200);
+}
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+  line-height: 1.1;
+}
